# xai-eval-pipeline

./: .gitignore  ANALYSIS_MODULE_DOCUMENTATION.md  CONFIG_README.md  MLproject.yaml  Makefile  README.md  README_SINGLE_ANALYSIS.md  main.py  mulitrun_main.py  prototyp_pipeline.py  pyproject.toml  requirements.txt  run_analysis_with_profiling.py  run_experiment.py  run_single_analysis.py  setup.py
.github/workflows/: ci.yml
Documentation/: README.md  class_diagramm_detailed.puml  componenten_architektur.puml  detailed_pipeline.puml  general_pipeline.puml  overview.puml  overview_simplefied.puml  overview_updated.puml  sequence.puml
Documentation/architecture/: class.puml  deployment.puml  general_pipeline.puml  multi_run_analysis.puml  overview.puml
Documentation/config/model_factory_register/: auto_register.puml
Documentation/data/: data_model_classdiagramm.puml
Documentation/evaluation/: activitydiagramm.puml  evaluation_modul_classdiagramm.puml  evaluation_pipeline.puml  metric_model_classdiagramm.puml
Documentation/legacy/pipeline vorschläge/: hybrid.puml  stufen.puml
Documentation/model_factory_register/: model_register.puml
Documentation/models/: ai_model_classdiagramm.puml
Documentation/pipeline/: ablauf_simpliefied.puml  dataflow_dataclasses.puml  pipeline.puml
Documentation/puml/: componenten_architektur.puml  overview.puml  pipeline.puml  sequence.puml
Documentation/puml/Version2/: XAI_Pipeline_Architecture.puml  ymalUml.puml
Documentation/puml/xai_factory_design/: xai_factory_activitydiagramm.puml  xai_factory_classdiagramm.puml  xai_factory_componentdiagramm.puml  xai_factory_sequencediagramm.puml
Documentation/xai/: simple_factory_register_pattern.puml  xai_factory_classdiagramm.puml  xai_model_classdiagramm.puml
archive/: Dataset_moreinfos.py  auto_batchsize_test.py  batch_prozess.py  collate_fn.py  concat_result_pd.py  describe_batch.py  evaluate_results.py  experiment_analyzer.py  experiment_collection.py  list_experiments.py  metrics_config.py  reporting_config.py  reset_pipeline_stats.py  resize_box_np_array.py  run_batch_tests.py  stream_evaluation.py
archive/MemoryManagement/base/: batch_processor.py  explainer_callable.py
archive/MemoryManagement/documentaion/: MemoryManagement.puml
archive/MemoryManagement/implementations/: adaptive_batch_processor.py  direct_batch_processor.py
archive/comprehensive_xai_meta_analysis/: comprehensive_summary.txt
archive/documentation/: ai_factory.puml
archive/models_gradcam_comparison/: accuracy_by_model_explainer.csv  analysis_summary.txt  correlation_matrix.csv  point_game_f1_scores.csv
archive/models_gradcam_comparison2/: accuracy_by_model_explainer.csv  analysis_summary.txt  correlation_matrix.csv
archive/resnet_xai_comparison/: accuracy_by_model_explainer.csv  analysis_summary.txt  correlation_matrix.csv  point_game_f1_scores.csv
archive/test_quick_run/: metrics_summary.yaml  results_with_metrics.csv
archive/test_quick_run/meta_analysis/: analysis_summary.txt  correlations.csv  f1_scores_by_model_method.csv  iou_distribution_stats.csv
archive/vgg16_xai_comparison/: accuracy_by_model_explainer.csv  analysis_summary.txt  combined_data_vgg16_xai_methods.csv  correlation_matrix.csv  point_game_f1_scores.csv
archive/vgg16_xai_methods2/: combined_data.csv
config/: config.yaml  config_grad_cam_no_limit.yaml  config_grad_cam_resnet18.yaml  config_guided_backprop.yaml  config_score_cam.yaml
config/experiments/: config_example_mlflow_setup.yaml  config_grad_cam_no_limit.yaml  config_resnet18_grad_cam.yaml  config_resnet34_grad_cam.yaml  config_resnet50_grad_cam.yaml  config_resnet50_guided_backprop.yaml  config_resnet50_integrated_gradients.yaml  config_resnet50_score_cam.yaml  config_test_quick.yaml  config_vgg16_grad_cam.yaml  config_vgg16_score_cam.yaml
data/raw/: final_mapping.txt
results/resnet50_grad_cam/: metrics_summary.yaml
results/resnet50_guided_backprop/: metrics_summary.yaml
results/resnet50_integrated_grad/: metrics_summary.yaml
results/vgg16_grad_cam/: metrics_summary.yaml
results/vgg16_score_cam/: metrics_summary.yaml  results_with_metrics.csv
src/analyse/: README_ANALYSIS.md  advanced_plotting.py  concat_result_pd.py  config_based_analyzer.py  experiment_analyzer.py  experiment_collection.py  experiment_configs.yaml  simple_analyzer.py
src/control/: orchestrator.py  xai_orchestrator.py
src/data/: image_net_val_dataset.py
src/models/: model_factory.py  model_interface.py
src/orchestration/: xai_orchestrator.py
src/ressource_management/: attribution_reference.py
src/utilis/: explainer_result.py
src/xai_methods/: explainer_registry.py  xai_factory.py
test/unit/: test_image_net_val_dataset.py  test_xai_orchestrator.py
tests/: test_batch_metric_assignment.py  test_batch_metric_integration.py  test_data_processing.py  test_evaluation_metrics.py  test_model_components.py  test_orchestrator_and_results.py  test_visualization.py  test_xai_explainers.py
tests/unit/: test_image_net_val_dataset.py  test_visualiser_layout.py  test_xai_orchestrator.py
(+193 files in other folders)
