[tool.poetry]
name = "xai_eval_pipeline"
version = "0.1.0"
package-mode = false
description = "Projektbeschreibung hier"
authors = ["Shium Rahman <shium.m.r@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "~1.26.4"
sympy = "~1.14.0"
pillow = "~11.2.1"
matplotlib = "~3.10.3"
PyYAML = "~6.0.2"
captum = "~0.8.0"
setuptools = "~80.9.0"
mlflow = ">=3.1.1"
pandas = "~2.2.3"
seaborn = "~0.13.2"
hydra-core = "~1.3.2"
omegaconf = "~2.3.0"
torch = { version = "2.7.1+cu118", source = "pytorch-cu118" }
torchvision = { version = "0.22.1+cu118", source = "pytorch-cu118" }
defusedxml = "^0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
mypy = "^1.10.0"
pytest = "^8.2.2"
types-PyYAML = "*"
types-setuptools = "*"
ruff = "^0.12.3"
pytest-cov = "^6.2.1"
sphinx = "^7.2"
sphinx-rtd-theme = "^1.3"
poethepoet = "^0.24.4"
types-seaborn = "^0.13.2.20250516"
bandit = "^1.8.6"
pydocstyle = "^6.3.0"
types-defusedxml = "^0.7.0.20250708"


[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
extend-exclude = '''
    /(
        \.venv
      | \.git
      | __pycache__
      | \.pytest_cache

    )/
'''

[tool.mypy]
python_version = "3.10"
strict_optional = true
check_untyped_defs = true
strict = true
warn_unused_configs = true

exclude = [
    ".venv/",
    "__pycache__/",
    ".pytest_cache/"
]

[tool.poe.tasks]
ruff = "ruff check src tests main.py"
ruff-fix = "ruff check --fix src tests main.py"
black = "black src tests main.py"
typecheck = "mypy src main.py"
test = "pytest tests"
check = ["black", "ruff", "typecheck", "test"]
pydocstyle = "pydocstyle src"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests"
]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    ".pytest_cache",
    "build",
    "dist"
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=import order
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy-torchvision]
ignore_missing_imports = true
